<resources>
    <string name="app_name">密码管家</string>
    <string name="check_tab">密码查询</string>
    <string name="add_tab">添加密码</string>
    <string name="mine_tab">密码浏览</string>
    <string name="input_key_words">请输入关键字</string>
    <string name="login">登录</string>
    <string name="add_password">添加密码</string>
    <string name="name">关键字：</string>
    <string name="user_name">用户名：</string>
    <string name="password">密码：</string>
    <string name="email">邮箱：</string>
    <string name="phone">手机：</string>
    <string name="third_login">是否第三方登录：</string>
    <string name="third_name">第三方登录平台：</string>
    <string name="third_info">第三方登录信息：</string>
    <string name="login_hint">请输入用户名</string>
    <string name="check">查</string>
    <string name="add_succeed">添加成功</string>
    <string name="del_succeed">删除成功</string>
    <string name="hint_name">请输入关键字</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_phone">请输入手机</string>
    <string name="hint_third_name">请输入第三方登录平台</string>
    <string name="hint_third_info">请输入第三方登录信息</string>
    <string name="hint_no_record">暂无密码保存记录</string>

</resources>