<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/color_white">

    <TextView
        android:id="@+id/p_name"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/loginFront"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:paddingLeft="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:id="@+id/user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3e3e3e"
                android:textSize="12sp"
                android:text="@string/user_name"/>
            <TextView
                android:id="@+id/p_user_name"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:id="@+id/pass_word_layout"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3e3e3e"
                android:textSize="12sp"
                android:text="@string/password"/>
            <TextView
                android:id="@+id/p_pass_word"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:id="@+id/p_email_layout"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3e3e3e"
                android:textSize="12sp"
                android:text="@string/email"/>
            <TextView
                android:id="@+id/p_email"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:id="@+id/p_phone_layout"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3e3e3e"
                android:textSize="12sp"
                android:text="@string/phone"/>
            <TextView
                android:id="@+id/p_phone"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:id="@+id/p_third_name_layout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3e3e3e"
                android:textSize="12sp"
                android:text="@string/third_name"/>
            <TextView
                android:id="@+id/p_third_name"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:id="@+id/p_third_info_layout"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3e3e3e"
                android:textSize="12sp"
                android:text="@string/third_info"/>
            <TextView
                android:id="@+id/p_third_info"
                android:gravity="center"
                android:textSize="13sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>