<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".activity.IndexActivity">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:orientation="vertical">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="34sp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:textColor="#7CC0AB"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PasswordManager"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textColor="#7CC0AB"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#7CC0AB"
            android:layout_above="@+id/view"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true" />

        <View
            android:layout_width="40dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:background="#7CC0AB"
            android:id="@+id/view" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="#f9f9f9"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="34dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="27dp"
                android:layout_height="36dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_login_name"
                android:layout_marginLeft="16dp"/>

            <EditText
                android:id="@+id/edtTxt_login_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="16sp"
                android:textSize="14sp"
                android:hint="@string/login_hint"
                android:textColor="#c0c0c0"
                android:background="@null"/>
        </LinearLayout>

        <Button
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:text="@string/login"
            android:background="@drawable/loginselector"
            android:textColor="#ffffff"
            android:layout_height="48dp"
            android:layout_marginTop="34dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"/>
    </LinearLayout>

</LinearLayout>